ffi/java/bls_impl.hpp

class SecretKey;
class PublicKey;
class Signature;